# ADSA-Chess-Engine-Game

./: .gitignore  GIT_SETUP_GUIDE.md  README.md
engine/: CMakeLists.txt
engine/include/: board.h  evaluation.h  game_tree_node.h  minimax_engine.h  move.h  move_generator.h  move_ordering.h  transposition_table.h  utils.h  zobrist.h
engine/src/: board.cpp  evaluation.cpp  game_tree_node.cpp  main.cpp  minimax_engine.cpp  move_generator.cpp  move_ordering.cpp  transposition_table.cpp  zobrist.cpp
frontend/: .env.example  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthScreen.css  AuthScreen.jsx  CapturedPieces.css  CapturedPieces.jsx  Chessboard.css  Chessboard.jsx  Controls.css  Controls.jsx  LearnChessPage.css  LearnChessPage.jsx  MoveHistory.css  MoveHistory.jsx  MultiplayerModal.css  MultiplayerModal.jsx  MultiplayerPanel.css  MultiplayerPanel.jsx  PerformanceMetrics.css  PerformanceMetrics.jsx  ScoreBar.css  ScoreBar.jsx
frontend/src/utils/: api.js  auth.js  multiplayerClient.js  soundManager.js
server/: engine-bridge.js  package.json  server.js
